syntax = "proto3";

package calculator;

option go_package = "github.com/lamtruong9x/grpc_project/calculator/proto";

message AvgRequest {
    int32 num = 1;
}

message AvgResponse {
    double avg = 1;
}