syntax = "proto3";

package calculator;

option go_package = "github.com/lamtruong9x/grpc_project/calculator/proto";

message SqrtRequest {
    int32 num = 1;
}

message SqrtResponse {
    double sqrt = 1;
}