syntax = "proto3";

package calculator;

option go_package = "github.com/lamtruong9x/grpc_project/calculator/proto";

message SumRequest {
    double a = 1;
    double b = 2;
}

message SumResponse {
    double sum = 1;
}

